--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.12.3",
+    "lodash": "^3.7.0",
+    "mongoose": "^4.0.1",
+    "morgan": "^1.5.3",
     "peer": "^0.2.8",
     "socket.io": "^1.3.5"
   }
