--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,8 @@
 {
-    "name": "LoveAria.me",
-    "dependencies": {
-        "express": "~4.13.0",
-        "body-parser": "~1.13.2"
-    }
+  "name": "LoveAria.me",
+  "dependencies": {
+    "body-parser": "~1.13.2",
+    "express": "~4.13.0",
+    "sqlite3": "^3.1.1"
+  }
 }
