--- a/server/bower.json
+++ b/server/bower.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "purescript-console": "^0.1.0",
     "purescript-free": "~0.9.1",
-    "purescript-express": "~0.3.0",
-    "purescript-aff": "~0.14.0"
+    "purescript-aff": "~0.14.0",
+    "purescript-express": "https://github.com/bramblex/purescript-express.git#master"
   }
 }
