--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "LoveAria.me",
   "dependencies": {
     "body-parser": "~1.13.2",
+    "cookie-session": "^1.2.0",
     "express": "~4.13.0",
     "sqlite3": "^3.1.1"
   }
