--- a/website/package.json
+++ b/website/package.json
@@ -4,6 +4,7 @@
     "body-parser": "~1.13.2",
     "cookie-session": "^1.2.0",
     "express": "~4.13.0",
+    "markdown": "^0.5.0",
     "sqlite3": "^3.1.1",
     "yargs": "^3.32.0"
   }
