--- a/client/main/bower.json
+++ b/client/main/bower.json
@@ -11,6 +11,9 @@
     "output"
   ],
   "dependencies": {
-    "purescript-console": "^0.1.0"
+    "purescript-console": "^0.1.0",
+    "purescript-affjax": "~0.11.0",
+    "purescript-dom": "~0.2.17",
+    "purescript-jquery": "https://github.com/bramblex/purescript-jquery.git#master"
   }
 }
