--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
     "body-parser": "~1.13.2",
     "cookie-session": "^1.2.0",
     "express": "~4.13.0",
-    "markdown": "^0.5.0",
+    "highlight.js": "^9.2.0",
+    "marked": "^0.3.5",
     "sqlite3": "^3.1.1",
     "yargs": "^3.32.0"
   }
